2004-01-06 Vangelis Rokas <vrokas@otenet.gr>

	* src/common.h: added ifndef/define/endif macros
	around the header file.
	Bug reported from Jesus Calvino-Fraga
	
2004-01-06 Bernhard Held <bernhard@bernhardheld.de>

	* sdcc.spec: updated
	* device/include/Makefile.in: don't install CVS directories
	* device/lib/Makefile.in: added removal of CVS directories after install
	* doc/Makefile: fixed install, added local_icons
	* sim/ucsim/gui.src/Makefile.in: fixed an old typo
	* src/mcs51/gen.c (genRightShift): fixed bug #870788
	* src/ds390/gen.c (genRightShift): fixed bug #870788
	* src/SDCCast.c (decorateType): fixed bug #870781

2004-01-06 Vangelis Rokas <vrokas@otenet.gr>

	PIC16 port related changes:
	* device.c: removed pic16_finalMapping and pic16_finalMappingSize,
	added variable stackPos,

	* gen.c: genCall, assignResultValue: added support for
	pushing/retrieving function parameters to/from stack,
	genFunction,genEndFunction: setup stack frame for the
	generated function,
	genAddrOf: will be changed according to bug 863624

	* added files genutils.c and genutils.h which contain gen*
	debugged and optimised functions extracted from gen.c
	
	* glue.c: added variable 'externs' which holds extern symbols,
	pic16emitRegularMap: is modified to properly handle relocatable
	 symbols under the new scheme,
	pic16createInterruptVect: is modified
	pic16printPublics: is modified to emit 'global'	assembler directives,
	added pic16_printExterns to print extern symbols,
	pic16glue: initializes stack/frame pointer in the beginning of
	the assembly output. Temporary hack, will be corrected later,
	because gplink yet does not support stack and SDCC does not
	yet support a type of crt0.o object to create the final binary.
	
	* Removed many lines that contain 8051 legacy code.
	* The code is finally placed under a 'code' directive.
	* Added port specific options.
	
	* _process_pragma: simplified since now we do not need *special*